# sphinxfeed

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  sphinxfeed.py  tox.ini  yasfb.py
sphinxfeed/: feedformatter.py
yasfb/: __init__.py  feedformatter.py
