[metadata]
name = yasfb
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Yet Another Sphinx Feed Builder
description-file = README.rst
license = BSD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Documentation
    Topic :: Utilities
keywords =
    Sphinx
home-page = https://github.com/dhellmann/yasfb
zip_safe = False

[files]
py_modules =
    yasfb.py

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = True
